// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlusIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-PlusIcon"
  isBadge={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M15 7v2H9v6H7V9H1V7h6V1h2v6h6z"
  />
</Icon>
`;

exports[`PlusIcon [common] example testing should match snapshot(s) for 1.default 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-PlusIcon"
  isBadge={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M15 7v2H9v6H7V9H1V7h6V1h2v6h6z"
  />
</Icon>
`;

exports[`PlusIcon [common] example testing should match snapshot(s) for 2.clickable 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-PlusIcon"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M15 7v2H9v6H7V9H1V7h6V1h2v6h6z"
  />
</Icon>
`;

exports[`PlusIcon [common] example testing should match snapshot(s) for 2.clickable 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-PlusIcon"
  isBadge={true}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M15 7v2H9v6H7V9H1V7h6V1h2v6h6z"
  />
</Icon>
`;

exports[`PlusIcon [common] example testing should match snapshot(s) for 3.disabled 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-PlusIcon"
  isBadge={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M15 7v2H9v6H7V9H1V7h6V1h2v6h6z"
  />
</Icon>
`;

exports[`PlusIcon [common] example testing should match snapshot(s) for 3.disabled 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-PlusIcon"
  isBadge={true}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M15 7v2H9v6H7V9H1V7h6V1h2v6h6z"
  />
</Icon>
`;
